# Kageuta

./: .gitignore  CMakeLists.txt  README.md  build.bat  convert_ico.py
assets/: app.rc
src/: clickableframe.h  main.cpp  mainwindow.cpp  mainwindow.h  player.cpp  player.h  scraper.cpp  scraper.h  styles.h  webview2widget.cpp  webview2widget.h
